moved files to correct location

--- a/WPD/index.html
+++ b/WPD/index.html
@@ -12,6 +12,7 @@ ul.nav a { zoom: 1; }  /* the zoom property gives IE the hasLayout trigger it ne
 </head>
 
 <body>
+D
 <div class="container">
   <div class="header"><a href="#"><img src="635835829068450311-48582844_GOP (1).jpg" alt="Insert Logo Here" name="Insert_logo" width="137" height="115" id="Insert_logo" style="background-color: #8090AB; display:block;" /></a>  </div>
     <div class="sidebar1">
@@ -20,6 +21,8 @@ ul.nav a { zoom: 1; }  /* the zoom property gives IE the hasLayout trigger it ne
       <li><a href="sub1/index.html"> Best comebacks</a></li>
       <li><a href="sub2/index.html">Positions </a></li>
       <li><a href="sub3/Untitled-1.html">RIP Marco</a></li>
+      <li><a href="svg/coffee_consumption.html">SVG</a></li>
+
     </ul>
     <p>People who have already joined the Marcomentum:</p>
     <p>1. Nikki Hayley (governor of South Carolina)</p>
@@ -48,7 +51,5 @@ ul.nav a { zoom: 1; }  /* the zoom property gives IE the hasLayout trigger it ne
     </ol>
     <h4>&nbsp;</h4>
     <!-- end .content --></div>
-  <div class="footer"><!-- end .footer --></div>
-<!-- end .container --></div>
-</body>
+</div></body>
 </html>
