--- a/WPD/SVG/coffee_consumption.html
+++ b/WPD/SVG/coffee_consumption.html
@@ -17,4 +17,4 @@
 		
 	</body>
 </html>
-    
+<p>Welcome to my svg prodject, I'm going to explain to you how this prodject works. The charts are broken into country, names, values, and chart headers and classed as symbols to allow for to allow them to be easily manipulated (for each chart country values and headers change but country names stay the same). What is left after that is a mess of all three charts being visibile, the charts needed to be selectivley visible. Next I used infographic rules to embed two of the headers and values, making them invisible, but filling out country names and the header of the chart that I wanted to be visible. Laslty I wanted to make it so, as the screen expanded, the other charts appeared and dissapeared. To do this I used a skeletal vector graphic, ot svg file, because I wanted a chart to appear at max widths</p>
