--- a/WPD/index.html
+++ b/WPD/index.html
@@ -21,7 +21,8 @@ D
       <li><a href="sub1/index.html"> Best comebacks</a></li>
       <li><a href="sub2/index.html">Positions </a></li>
       <li><a href="sub3/Untitled-1.html">RIP Marco</a></li>
-     <li><a href="../GITHUB/natehotes.github.io/coffee_consumption.html">SVG</a></li>
+     <li><a href="SVG/coffee_consumption.html">SVG</a></li>
+     <li><a href="Forms/form.html">Form Project</a></li>
 
     </ul>
     <p>People who have already joined the Marcomentum:</p>
