--- a/WPD/Forms/form.html
+++ b/WPD/Forms/form.html
@@ -1,7 +1,7 @@
-<!DOCTYPE HTML>
+		<!DOCTYPE HTML>
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta http-equiv="Content-Type" content="text/html	; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Design the Web</title>
 		<link rel="stylesheet" type="text/css" href="form.css">
@@ -28,7 +28,8 @@
 				<h4>Choose a format</h4>
 				<input id="format-t" type="radio" name="format"><label for="format-t">Text Only</label>
 				<br>
-				<input id="format-h" type="radio" name="format"><label for="format-h">HTML (with images)</label>
+				<input id="format-h" type="radio" name="format"><label for="format-h">HTML (with images)
+                </label>
 
 				<h4>Choose a frequency</h4>
 				<select id="frequency">
@@ -50,7 +51,10 @@
 			<input type="submit" value="Sign me up">
 
 		</form>
-
+        
+        <p>First I targeted the form element with the ID of signup, changing the width, padding, and background. Next target induvidual headers and finally  with form headers by implementing margins, colors, and font sizes</p>
+        
+	
 
 	</body>
 </html>
