--- a/WPD/Forms/form.html
+++ b/WPD/Forms/form.html
@@ -52,8 +52,25 @@
 
 		</form>
         
-        <p>First I targeted the form element with the ID of signup, changing the width, padding, and background. Next target induvidual headers and finally  with form headers by implementing margins, colors, and font sizes</p>
-        
+<p>First I targeted the form element with the ID of signup, changing the width, padding, and
+
+background. Next target individual headers and finally with form headers by implementing margins,
+
+colors, and font sizes. After that I targeted the legend, fieldset, and textarea through focus and hover.
+
+The select menu is then edited to put in the blue and yellow through selecting appearance rules and
+
+margins including expanding the ms section so it’s visible. Then I went to input and checkbox tabs and
+
+make input elements invisible while and style label elements with margins, backgrounds, and
+
+background positions so we can make the buttons fit well and be readable. Next up use input#email to
+
+set up the email button with background and font-size with the image of the email envelope and set up
+
+a hover rule to make the background white and style the submit button with borders, fonts, margins,
+
+and webkit-appearance. </p>        
 	
 
 	</body>
